<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="Button_Text">I\'m a button</string>
    <string name="login">Login</string>
    <string name="login_name">login name</string>
    <string name="passwd">password</string>
    <string name="login_passwd">your password</string>
    <string name="login_button">LOGIN</string>
    <string name="radio_button">Radio Button</string>
    <string name="check_box">Check Box</string>
    <string name="switch_text">What does this do?</string>
    <string name="dialog_message">Do you want to exit this Activity?</string>
    <string name="dialog_title">Exit?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="startChat_Button">Start Chat</string>
    <string name="send_button">Send</string>
    <string name="start_Weather_Forecast">Weather Forecast</string>
    <string name="current_Temperature">Current Temperature:</string>
    <string name="max_Temperature">Maximum Temperature:</string>
    <string name="min_Temperature">Minimum Temperature:</string>
    <string name="wind_speed">Wind Speed:</string>
    <string name="current_Weather">Current Weather:</string>
    <string name="deleteMessageButton">Delete This Message</string>
    <string name="dialogBoxTitle">Do you want to go back?</string>
    <string name="newMessage">New Message</string>
    <string name="test_toolbar">Test Toolbar</string>
    <string name="positiveButton">Yes</string>
    <string name="negativeButton">No</string>


</resources>
