<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:columnCount="2"
    android:rowCount="2"
    tools:context="com.example.lee.androidlabs.ListItemsActivity">

    <RadioButton
        android:text="@string/radio_button"
        android:layout_columnWeight="1"
        android:gravity="fill"/>
    <CheckBox
        android:text="@string/check_box"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:id="@+id/checkBox"/>
    <Switch
        android:text="@string/switch_text"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:id="@+id/aSwitch"
        />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_columnWeight="1"
        android:gravity="fill"/>


</GridLayout >
